--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,6 +6,7 @@
       </h1>
       <p class="lead">
       <p><%= link_to 'View Hotels' , hotel_branches_path, class: 'btn btn-success btn-lg' %></p>
+      <p><%= link_to 'View Rooms' , rooms_path, class: 'btn btn-succes btn-lg'%></p>
     </div>
   </div>
 </div>
