--- a/app/views/hotel_branches/show.html.erb
+++ b/app/views/hotel_branches/show.html.erb
@@ -4,7 +4,7 @@
 <p><strong> Address: </strong> <%= @hotel.address%></p>
 <p><strong> City: </strong> <%= @hotel.city%></p>
 <p><strong> State: </strong> <%= @hotel.state%></p>
-<p><strong> Country: </strong> <%= @hotel.country%></p>
+<p><strong> Country: </strong> <%= @hotel.location.country%></p>
 <p><strong> Phone: </strong> <%= @hotel.phone%></p>
 <p><strong> Website: </strong> <%= @hotel.website%></p>
 
