--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,8 @@
       </h1>
       <p class="lead">
       <p><%= link_to 'View Hotels' , hotel_branches_path, class: 'btn btn-success btn-lg' %></p>
-      <p><%= link_to 'View Rooms' , rooms_path, class: 'btn btn-succes btn-lg'%></p>
+      <p><%= link_to 'View Rooms' , rooms_path, class: 'btn btn-success btn-lg'%></p>
+      <p><%= link_to 'View Room Facility Categories' , room_facility_categories_path, class: 'btn btn-success btn-lg'%>
     </div>
   </div>
 </div>
