made app requirements ready

--- a/app/views/hotel_branches/show.html.erb
+++ b/app/views/hotel_branches/show.html.erb
@@ -8,4 +8,6 @@
 <p><strong> Phone: </strong> <%= @hotel.phone%></p>
 <p><strong> Website: </strong> <%= @hotel.website%></p>
 
+<p><%= link_to 'View Rooms' , rooms_path %></p>
+
 <p><%= link_to "Back" , hotel_branches_path %></p>
