--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,8 +6,7 @@
       </h1>
       <p class="lead">
       <p><%= link_to 'View Hotels' , hotel_branches_path, class: 'btn btn-success btn-lg' %></p>
-      <p><%= link_to 'View Rooms' , rooms_path, class: 'btn btn-success btn-lg'%></p>
-      <p><%= link_to 'View Room Facility Categories' , room_facility_categories_path, class: 'btn btn-success btn-lg'%>
+      <p><%= link_to 'View About' , about_path, class: 'btn btn-primary ' %></p>    
     </div>
   </div>
 </div>
