--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -27,4 +27,7 @@
 
 <br>
 
-<%= link_to 'New Room', new_room_path %>
+<p><%= link_to 'New Room', new_room_path %></p>
+
+
+<%= link_to 'View Room facilities', room_facilities_path %>
