--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,8 +5,7 @@
        <strong>Hotel Management Application</strong>
       </h1>
       <p class="lead">
-      <p><%= link_to 'View Hotels' , hotel_branches_path, class: 'btn btn-success btn-lg' %></p>
-      <p><%= link_to 'View About' , about_path, class: 'btn btn-primary ' %></p>    
+      <p><%= link_to 'Sign Up' , signup_path, class: 'btn btn-success btn-lg' %></p>
     </div>
   </div>
 </div>
