--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -11,8 +11,11 @@
                <li class="nav-item">
                 <%= link_to 'Hotels', hotel_branches_path, class: "nav-link" %>
               </li>
+              <li class="nav-item">
+                <%= link_to 'Clients', clients_path, class: "nav-link" %>
+              </li>
                <li class="nav-item">
-                <%= link_to 'Employees', users_path, class: "nav-link" %>
+                <%= link_to 'Profile', user_path(current_user), class: "nav-link" %>
               </li>
               <li class="nav-item">
                 <%= link_to 'Logout', logout_path, class: "nav-link", method: :delete %>
@@ -21,9 +24,6 @@
               <li class="nav-item">
                 <%= link_to 'Log in', login_path, class: "nav-link" %>
               </li>
-              <li class="nav-item">
-                <%= link_to 'Sign up', signup_path, class: "nav-link" %>
-               </li>
             <% end %>
        </ul>
          <form class="form-inline my-2 my-lg-0">
