--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,6 +4,11 @@
       <div class="text-center mt-4">
       <%= link_to "Edit your profile", edit_user_path(@user), class: "btn btn-outline-info" %>
       </div>
+      <div class="text-center mt-4">
+         <%= link_to "Delete user", user_path(@user), class: "btn btn-outline-danger", method: :delete,
+         data: {confirm: "Are you sure you want to delete the user account permanently"} %>
+      </div>
+       <div class="text-center mt-4">
+       <%= link_to "view Clients", clients_path , class: "btn btn-success btn-lg" %><br/>
+      </div>
    <% end %>
-
-   <%= link_to "view Clients", clients_path%><br/>
