--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -31,7 +31,7 @@
           </div>
         <% end %>
       </div>
-      <%= link_to '[ Cancel and return to articles listing ]', clients_path, class: "text-info" %>
+      <%= link_to '[ Cancel]', root_path, class: "text-info" %>
     </div>
   </div>
 
