--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,10 +1,10 @@
 <h1>Listing clients</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Name</th>
-      <th colspan="3">Actions</th>
+      <th>Actions</th>
     </tr>
   </thead>
 
@@ -12,9 +12,9 @@
     <% @client.each do |client| %>
       <tr>
         <td><%= client.name %></td>
-        <td><%= link_to 'Show', client_path(client) %></td>
-        <td><%= link_to 'Edit', edit_client_path(client) %></td>
-        <td><%= link_to 'Destroy', client_path(client), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', client_path(client), class: 'btn btn-secondary' %></td>
+        <td><%= link_to 'Edit', edit_client_path(client), class: 'btn btn-primary' %></td>
+        <td><%= link_to 'Destroy', client_path(client), method: :delete, data: { confirm: 'Are you sure?' } , class: 'btn btn-danger'%></td>
       </tr>
     <% end %>
   </tbody>
@@ -22,4 +22,4 @@
 
 <br>
 
-<%= link_to 'New Client', new_client_path %>
+<%= link_to 'New Client', new_client_path , class: 'btn btn-primary' %>
