--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -1,7 +1,11 @@
-<p>
-  <strong>Name:</strong>
-  <%= @client.name %>
-</p>
-
-<%= link_to 'Edit', edit_client_path(@client) %> |
-<%= link_to 'Back', clients_path %>
+<div class="container mt-5">
+  <div class="card">
+    <div class="card-header">
+       <h2 class="card-subtitle mb-2 text-muted"><%= @client.name %></h2>
+    </div>
+    <div class="card-footer text-muted">
+      <%= link_to 'Edit', edit_client_path(@client), class: 'btn btn-primary' %>
+      <%= link_to 'Back', clients_path, class: 'btn btn-secondary' %>
+    </div>
+  </div>
+</div>
