--- a/app/views/hotel_branches/index.html.erb
+++ b/app/views/hotel_branches/index.html.erb
@@ -1,5 +1,5 @@
-<h1> List of all Hotels </h1>
-<table>
+<h1 class="display-2 text-dark bg-white"> List of all Hotels </h1>
+<table class="table">
   <thead>
     <tr>
       <th> Hotel Name </th>
@@ -9,7 +9,6 @@
       <th> Location </th>
       <th> Phone </th>
       <th> Website </th>
-      <th colspan=3> Actions </th>
     </tr>
     <tr>
   </thead>
@@ -23,19 +22,19 @@
       <td><%= hotel.location.country if hotel.location%></td>
       <td><%= hotel.phone %></td>
       <td><%= hotel.website %></td>
-      <td><%= link_to 'Show', hotel_branch_path(hotel) %></td>
-      <td><%= link_to 'Edit', edit_hotel_branch_path(hotel) %></td>
-      <td><%= link_to 'Delete', hotel_branch_path(hotel) , method: :delete , data: {confirm: "Are you sure?"}%></td>
+      <td><%= link_to 'Show', hotel_branch_path(hotel), class: 'btn btn-secondary' %></td>
+      <td><%= link_to 'Edit', edit_hotel_branch_path(hotel), class: 'btn btn-primary' %></td>
+      <td><%= link_to 'Delete', hotel_branch_path(hotel), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %></td>
         </tr>
       <% end %>
     </tbody>
 </table>
 
 <p>
-  <%= link_to 'Add New Hotel' , new_hotel_branch_path %>
+  <%= link_to 'Add New Hotel' , new_hotel_branch_path , class: 'btn btn-primary' %>
 </p>
 
 <p>
-  <%= link_to 'Home' , root_path %>
+  <%= link_to 'Home' , root_path, class: 'btn btn-secondary' %>
 </p>
 
