--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Locations</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Country</th>
@@ -14,9 +14,9 @@
       <tr>
         <td><%= location.country %></td>
         <td><%= location.region.name %></td>
-        <td><%= link_to 'Show', location_path(location) %></td>
-        <td><%= link_to 'Edit', edit_location_path(location) %></td>
-        <td><%= link_to 'Destroy', location_path(location), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', location_path(location), class: 'btn btn-primary'%></td>
+        <td><%= link_to 'Edit', edit_location_path(location) , class: 'btn btn-secondary'%></td>
+        <td><%= link_to 'Destroy', location_path(location),class: 'btn btn-danger', method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
