--- a/app/views/locations/new.html.erb
+++ b/app/views/locations/new.html.erb
@@ -1,4 +1,3 @@
-<h1>New Location</h1>
   <% if @location.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@location.errors.count, "error") %> prohibited this location from being saved:</h2>
@@ -10,21 +9,32 @@
       </ul>
     </div>
   <% end %>
-
-<%= form_with scope: :location, url: locations_path, local: true do |f| %>
-  <div class="field">
-    <%= f.label :Location_name %>
-    <%= f.text_field :country %>
+<div class="container">
+  <div class="row justify-content-center mt-4 ">
+    <div class="col-md-8">
+      <div class="card">
+        <div class="card-header">Add a New Location</div>
+        <div class="card-body">
+          <%= form_with scope: :location, url: locations_path, local: true do |f| %>
+            <div class="form-group">
+              <%= f.label :Country%>
+              <%= f.text_field :country, class: 'form-control' %>
+            </div>
+            <div class="form-group">
+              <%= f.label :Region %><br/>
+              <%= f.select :region_id, Region.all.collect {|x| [x.name, x.id]}, {} %>
+            </div>
+            <div class="form-group">
+              <%= f.submit 'Add Location', class: 'btn btn-primary mt-2' %>
+            </div>
+          <% end %>
+          <div class="card-footer text-muted">
+            <%= link_to 'Back', locations_path, class: 'btn btn-secondary' %>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
+</div>
 
-  <div class="field">
-    <%= f.label :region_id %>
-    <%= f.collection_select :region_id, Region.all, :id, :name %>
-  </div>
 
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
-
-<%= link_to 'Back', locations_path %>
