--- a/app/views/room_facility_categories/edit.html.erb
+++ b/app/views/room_facility_categories/edit.html.erb
@@ -1,6 +1,23 @@
-<%= form_with(model: @room_facility_category, url: room_facility_category_path(@room_facility_category), method: :patch) do |form| %>
-  <%= form.label :name %>
-  <%= form.text_field :name %>
-
-  <%= form.submit "Update Category" %>
-<% end %>
+<div class="container">
+  <div class="row justify-content-center mt-4 ">
+    <div class="col-md-8">
+      <div class="card">
+        <div class="card-header">Add New Facility Category</div>
+        <div class="card-body">
+          <%= form_with(model: @room_facility_category, remote: true) do |f| %>
+            <div class="form-group">
+              <%= f.label :Name%>
+              <%= f.text_field :name, class: 'form-control' %>
+            </div>
+            <div class="form-group">
+              <%= f.submit 'Update Category', class: 'btn btn-primary mt-2' %>
+            </div>
+          <% end %>
+          <div class="card-footer text-muted">
+            <%= link_to 'Back', room_facility_categories_path, class: 'btn btn-secondary' %>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
