--- a/app/views/room_facility_categories/index.html.erb
+++ b/app/views/room_facility_categories/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Listing Room Facility Categories</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Name</th>
@@ -12,9 +12,9 @@
     <% @room_facility_categories.each do |room_facility_category| %>
       <tr>
         <td><%= room_facility_category.name %></td>
-        <td><%= link_to 'Show', room_facility_category %></td>
-        <td><%= link_to 'Edit', edit_room_facility_category_path(room_facility_category) %></td>
-        <td><%= link_to 'Destroy', room_facility_category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', room_facility_category, class: 'btn btn-primary'%></td>
+        <td><%= link_to 'Edit', edit_room_facility_category_path(room_facility_category), class: 'btn btn-secondary' %></td>
+        <td><%= link_to 'Destroy', room_facility_category,class: 'btn btn-danger',method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -22,4 +22,4 @@
 
 <br>
 
-<%= link_to 'New Room Facility Category', new_room_facility_category_path %>
+<%= link_to 'New Room Facility Category', new_room_facility_category_path, class: 'btn btn-primary' %>
