--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,5 +1,5 @@
 <h1>List of Rooms</h1>
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Name</th>
@@ -17,9 +17,9 @@
         <td><%= room.capacity %></td>
         <td><%= room.price %></td>
         <td><%= room.hotel_branch.name %></td>
-        <td><%= link_to 'Show', room_path(room) %></td>
-        <td><%= link_to 'Edit', edit_room_path(room) %></td>
-        <td><%= link_to 'Destroy', room_path(room), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', room_path(room) , class: 'btn btn-primary' %></td>
+        <td><%= link_to 'Edit', edit_room_path(room) , class: 'btn btn-secondary' %></td>
+        <td><%= link_to 'Destroy', room_path(room),class: 'btn btn-danger', method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -27,7 +27,7 @@
 
 <br>
 
-<p><%= link_to 'New Room', new_room_path %></p>
+<p><%= link_to 'New Room', new_room_path ,class: 'btn btn-primary'%></p>
 
 
-<%= link_to 'View Room facilities', room_facilities_path %>
+<%= link_to 'View Room facilities', room_facilities_path, class: 'btn btn-secondary' %>
