--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,7 +1,17 @@
-<h1>Room Details</h1>
-
-<p>Name: <%= @room.name %></p>
-<p>Capacity: <%= @room.capacity %></p>
-<p>Price: <%= @room.price %></p>
-<p> Hotel :<%= @room.hotel_branch.name%></p>
-
+<h1 class="text-dark bg-white">Room Details</h1>
+<div class="container mt-5">
+  <div class="card">
+    <div class="card-header">
+      <h1 class="card-title"><%= @room.name %></h1>
+    </div>
+    <div class="card-body">
+       <h2 class="card-subtitle mb-2 text-muted">Capacity: <%= @room.capacity %></h2>
+       <h2 class="card-subtitle mb-2 text-muted">Price: <%= @room.price %></h2>
+       <h2 class="card-subtitle mb-2 text-muted">Hotel: <%= @room.hotel_branch.name %></h2>
+    </div>
+    <div class="card-footer text-muted">
+      <%= link_to 'Edit', edit_room_path(@room), class: 'btn btn-primary' %>
+      <%= link_to 'Back', rooms_path, class: 'btn btn-secondary' %>
+    </div>
+  </div>
+</div>
