--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -1,22 +1,10 @@
-<h1>New Location</h1>
-  <% if @location.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@location.errors.count, "error") %> prohibited this location from being saved:</h2>
-
-      <ul>
-        <% @location.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
 <div class="container">
   <div class="row justify-content-center mt-4 ">
     <div class="col-md-8">
       <div class="card">
         <div class="card-header">Edit Location Details</div>
         <div class="card-body">
-          <%= form_with(model: @location, remote: true) do |f| %>
+          <%= form_with(model: @location, data: { remote: true}, method: :patch, id: 'edit-form' ) do |f| %>
             <div class="form-group">
               <%= f.label :Country%>
               <%= f.text_field :country, class: 'form-control' %>
@@ -37,5 +25,4 @@
     </div>
   </div>
 </div>
-
 
