--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -15,13 +15,13 @@
         <td><%= location.country %></td>
         <td><%= location.region.name %></td>
         <td><%= link_to 'Show', location_path(location), class: 'btn btn-primary'%></td>
-        <td><%= link_to 'Edit', edit_location_path(location) , class: 'btn btn-secondary'%></td>
+        <td><%= link_to 'Edit', edit_location_path(location), data: { remote: true}, class: 'btn btn-secondary'%></td>
         <td><%= link_to 'Destroy', location_path(location),class: 'btn btn-danger', method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
 <br>
-
 <%= link_to 'New Location', new_location_path %>
+
+<div id="form-container"></div>
