--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -10,13 +10,15 @@
   </thead>
 
   <tbody>
-    <% @location.each do |location| %>
-      <tr>
+   <% @location.each do |location| %>
+      <tr id="location-<%= location.id %>">
         <td><%= location.country %></td>
         <td><%= location.region.name %></td>
-        <td><%= link_to 'Show', location_path(location), class: 'btn btn-primary'%></td>
-        <td><%= link_to 'Edit', edit_location_path(location), data: { remote: true}, class: 'btn btn-secondary'%></td>
-        <td><%= link_to 'Destroy', location_path(location),class: 'btn btn-danger', method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', location_path(location), class: 'btn btn-primary' %></td>
+        <td><%= link_to 'Edit', edit_location_path(location), data: { remote: true }, class: 'btn btn-secondary' %></td>
+        <td>
+            <%= button_to 'Delete', location_path(location), class: 'btn btn-danger', remote: true , method: :delete, data: { confirm: 'Are you sure?' }%>
+        </td>
       </tr>
     <% end %>
   </tbody>
@@ -25,3 +27,5 @@
 <%= link_to 'New Location', new_location_path %>
 
 <div id="form-container"></div>
+<div id="location-"></div>
+
