--- a/app/views/regions/_form.html.erb
+++ b/app/views/regions/_form.html.erb
@@ -1,6 +1,8 @@
+<h1> Edit Region</h1>
 <% if @region.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@region.errors.count, "error") %> prohibited this region from being saved:</h2>
+
       <ul>
         <% @region.errors.full_messages.each do |message| %>
           <li><%= message %></li>
@@ -12,9 +14,9 @@
   <div class="row justify-content-center mt-4 ">
     <div class="col-md-8">
       <div class="card">
-        <div class="card-header">Add a New region</div>
+        <div class="card-header">Edit Region Details</div>
         <div class="card-body">
-          <%= form_with scope: :region, url: regions_path, local: true do |f| %>
+          <%= form_with(model: @region, data: { remote: true}, method: :patch, id: 'edit-form' ) do |f| %>
             <div class="form-group">
               <%= f.label :Region%>
               <%= f.text_field :name, class: 'form-control' %>
@@ -24,7 +26,7 @@
               <%= f.select :client_id, Client.all.collect {|x| [x.name, x.id]}, {} %>
             </div>
             <div class="form-group">
-              <%= f.submit 'Add Region', class: 'btn btn-primary mt-2' %>
+              <%= f.submit 'Update Region', class: 'btn btn-primary mt-2' %>
             </div>
           <% end %>
           <div class="card-footer text-muted">
@@ -35,6 +37,5 @@
     </div>
   </div>
 </div>
-
 
 
