--- a/app/views/regions/index.html.erb
+++ b/app/views/regions/index.html.erb
@@ -11,12 +11,12 @@
 
   <tbody>
     <% @region.each do |region| %>
-      <tr>
+      <tr id="region-<%= region.id %>">
         <td><%= region.name %></td>
         <td><%= region.client.name %></td>
-        <td><%= link_to 'Show', region_path(region) %></td>
-        <td><%= link_to 'Edit', edit_region_path(region) %></td>
-        <td><%= link_to 'Destroy', region_path(region), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', region_path(region), class: 'btn btn-secondary' %></td>
+        <td><%= link_to 'Edit', edit_region_path(region), data: { remote: true }, class: 'btn btn-primary' %></td>
+        <td><%= button_to 'Delete', region_path(region), class: 'btn btn-danger', remote: true , method: :delete, data: { confirm: 'Are you sure?' }%></td>
       </tr>
     <% end %>
   </tbody>
@@ -24,4 +24,6 @@
 
 <br>
 
-<%= link_to 'New Region', new_region_path %>
+<%= link_to 'New Region', new_region_path , class: 'btn btn-primary' %>
+
+<div id="form-container"></div>
