Added Ajax form submissions for regions

--- a/app/views/regions/edit.js.erb
+++ b/app/views/regions/edit.js.erb
@@ -3,6 +3,6 @@ $(document).ready(function() {
   $('#form-container').html('<%= escape_javascript(render 'regions/form') %>');
 });
 
-function location_reload() {
+function region_reload() {
     window.location.reload();
   }
