--- a/app/views/regions/show.html.erb
+++ b/app/views/regions/show.html.erb
@@ -1,11 +1,14 @@
-<p>
-  <strong>Name:</strong>
-  <%= @region.name %>
-</p>
-
-<p>
-  <strong>Client:</strong>
-    <%= @region.client.name %>
-</p>
-<%= link_to 'Edit', edit_region_path(@region) %> |
-<%= link_to 'Back', regions_path %>
+<h1 class="text-dark bg-white">Region Details</h1>
+<div class="container mt-5">
+  <div class="card">
+    <div class="card-header">
+      <h1 class="card-title"><%= @region.name %></h1>
+    </div>
+    <div class="card-body">
+       <h2 class="card-subtitle mb-2 text-muted">Client: <%= @region.client.name %></h2>
+    </div>
+    <div class="card-footer text-muted">
+      <%= link_to 'Back', regions_path, class: 'btn btn-secondary' %>
+    </div>
+  </div>
+</div>
