--- a/app/views/rooms/edit.html.erb
+++ b/app/views/rooms/edit.html.erb
@@ -1,36 +1,1 @@
-<div class="container">
-  <div class="row justify-content-center mt-4 ">
-    <div class="col-md-8">
-      <div class="card">
-        <div class="card-header">Edit Room Details</div>
-        <div class="card-body">
-          <%= form_with(model: @room, remote: true) do |f| %>
-            <div class="form-group">
-              <%= f.label :Name %>
-              <%= f.text_field :name, class: 'form-control' %>
-            </div>
-            <div class="form-group">
-              <%= f.label :Hotel %><br/>
-              <%= f.select :hotel_branch_id, HotelBranch.all.collect {|x| [x.name, x.id]}, {} %>
-            </div>
-            <div class="form-group">
-              <%= f.label :Capacity %>
-              <%= f.text_field :capacity, class: 'form-control' %>
-            </div>
-            <div class="form-group">
-              <%= f.label :Price %>
-              <%= f.text_field :price, class: 'form-control' %>
-            </div>
-            <div class="form-group">
-              <%= f.submit 'Update Room', class: 'btn btn-primary mt-2' %>
-            </div>
-          <% end %>
-          <div class="card-footer text-muted">
-            <%= link_to 'Back', rooms_path, class: 'btn btn-secondary' %>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
+<%= render 'form' %>
