--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -12,14 +12,14 @@
 
   <tbody>
     <% @room.each do |room| %>
-      <tr>
+      <tr id="room-<%= room.id %>">
         <td><%= room.name %></td>
         <td><%= room.capacity %></td>
         <td><%= room.price %></td>
         <td><%= room.hotel_branch.name %></td>
         <td><%= link_to 'Show', room_path(room) , class: 'btn btn-primary' %></td>
-        <td><%= link_to 'Edit', edit_room_path(room) , class: 'btn btn-secondary' %></td>
-        <td><%= link_to 'Destroy', room_path(room),class: 'btn btn-danger', method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Edit', edit_room_path(room), data: { remote: true }, class: 'btn btn-secondary' %></td>
+        <td><%= button_to 'Delete', room_path(room), class: 'btn btn-danger', remote: true , method: :delete, data: { confirm: 'Are you sure?' }%></td>
       </tr>
     <% end %>
   </tbody>
@@ -31,3 +31,5 @@
 
 
 <%= link_to 'View Room facilities', room_facilities_path, class: 'btn btn-secondary' %>
+
+<div id="form-container"></div>
