Added Ajax submission for hotels and roomfacilities

--- a/app/views/hotel_branches/index.html.erb
+++ b/app/views/hotel_branches/index.html.erb
@@ -14,19 +14,19 @@
   </thead>
     <tbody>
       <% @hotel.each do |hotel| %>
-        <tr>
-      <td><%= hotel.name %></td>
-      <td><%= hotel.address %></td>
-      <td><%= hotel.city %></td>
-      <td><%= hotel.state %></td>
-      <td><%= hotel.location.country if hotel.location%></td>
-      <td><%= hotel.phone %></td>
-      <td><%= hotel.website %></td>
-      <td><%= link_to 'Show', hotel_branch_path(hotel), class: 'btn btn-secondary' %></td>
-      <td><%= link_to 'Edit', edit_hotel_branch_path(hotel), class: 'btn btn-primary' %></td>
-      <td><%= link_to 'Delete', hotel_branch_path(hotel), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %></td>
+        <tr id="hotel-<%= hotel.id %>">
+          <td><%= hotel.name %></td>
+          <td><%= hotel.address %></td>
+          <td><%= hotel.city %></td>
+          <td><%= hotel.state %></td>
+          <td><%= hotel.location.country if hotel.location%></td>
+          <td><%= hotel.phone %></td>
+          <td><%= hotel.website %></td>
+          <td><%= link_to 'Show', hotel_branch_path(hotel), class: 'btn btn-primary' %></td>
+          <td><%= link_to 'Edit', edit_hotel_branch_path(hotel), data: { remote: true }, class: 'btn btn-secondary' %></td>
+          <td><%= button_to 'Delete', hotel_branch_path(hotel), class: 'btn btn-danger', remote: true , method: :delete, data: { confirm: 'Are you sure?' }%></td>
         </tr>
-      <% end %>
+        <% end %>
     </tbody>
 </table>
 
@@ -37,4 +37,6 @@
 <p>
   <%= link_to 'Home' , root_path, class: 'btn btn-secondary' %>
 </p>
+
+<div id="form-container"></div>
 
