--- a/app/views/hotel_branches/_form.html.erb
+++ b/app/views/hotel_branches/_form.html.erb
@@ -2,7 +2,7 @@
   <div class="row justify-content-center mt-4 ">
     <div class="col-md-8">
       <div class="card">
-        <div class="card-header">Add a New Hotel</div>
+        <div class="card-header">Edit Hotel Details</div>
         <div class="card-body">
           <% if @hotel.errors.any? %>
             <div id="error_explanation">
@@ -14,7 +14,7 @@
               </ul>
             </div>
           <% end %>
-          <%= form_with scope: :hotel_branch  , url: hotel_branches_path, local: true do |f| %>
+          <%= form_with(model: @hotel, data: { remote: true}, method: :patch, id: 'edit-form' ) do |f| %>
             <div class="form-group">
               <%= f.label :Name %>
               <%= f.text_field :name, class: 'form-control' %>
@@ -33,7 +33,7 @@
             </div>
             <div class="form-group">
               <%= f.label :Location %><br/>
-              <%= f.collection_select :location_id, Location.all, :id, :country %>
+              <%= f.collection_select :location_id, Location.all, :id, :country , class: 'form-control' %>
             </div>
             <div class="form-group">
               <%= f.label :Phone %>
@@ -44,7 +44,7 @@
               <%= f.text_field :website, class: 'form-control' %>
             </div>
             <div class="form-group">
-              <%= f.submit 'Add Hotel', class: 'btn btn-primary' %>
+              <%= f.submit 'Update Hotel', class: 'btn btn-primary' %>
             </div>
           <% end %>
         </div>
