--- a/app/views/hotel_branches/edit.html.erb
+++ b/app/views/hotel_branches/edit.html.erb
@@ -1,44 +1,1 @@
-<div class="container">
-  <div class="row justify-content-center mt-4 ">
-    <div class="col-md-8">
-      <div class="card">
-        <div class="card-header">Edit Hotel Details</div>
-        <div class="card-body">
-          <%= form_with(model: @hotel, remote: true) do |f| %>
-            <div class="form-group">
-              <%= f.label :Name %>
-              <%= f.text_field :name, class: 'form-control' %>
-            </div>
-            <div class="form-group">
-              <%= f.label :Address %>
-              <%= f.text_field :address, class: 'form-control' %>
-            </div>
-            <div class="form-group">
-              <%= f.label :City%>
-              <%= f.text_field :city, class: 'form-control' %>
-            </div>
-            <div class="form-group">
-              <%= f.label :State %>
-              <%= f.text_field :state, class: 'form-control' %>
-            </div>
-            <div class="form-group">
-              <%= f.label :Country %><br/>
-              <%= f.collection_select :location_id, Location.all, :id, :country , class: 'form-control' %>
-            </div>
-            <div class="form-group">
-              <%= f.label :Phone %>
-              <%= f.text_field :phone, class: 'form-control' %>
-            </div>
-            <div class="form-group">
-              <%= f.label :Website %>
-              <%= f.text_field :website, class: 'form-control' %>
-            </div>
-            <div class="form-group">
-              <%= f.submit 'Add Hotel', class: 'btn btn-primary' %>
-            </div>
-          <% end %>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+<%= render 'form' %>
