--- a/app/views/hotel_branches/new.html.erb
+++ b/app/views/hotel_branches/new.html.erb
@@ -36,6 +36,10 @@
               <%= f.collection_select :location_id, Location.all, :id, :country %>
             </div>
             <div class="form-group">
+              <%= f.label :Client %><br/>
+              <%= f.select :client_id, Client.all.collect {|x| [x.name, x.id]}, {} %>
+            </div>
+            <div class="form-group">
               <%= f.label :Phone %>
               <%= f.text_field :phone, class: 'form-control' %>
             </div>
