--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -3,14 +3,14 @@
     <% if name == 'notice' %>
       <div class="alert alert-success alert-dismissible fade show" role="alert">
         <%= msg %>
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <button type="button" class="close" data-bs-dismiss="alert" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
     <% elsif name == 'alert' %>
       <div class="alert alert-danger alert-dismissible fade show" role="alert">
         <%= msg %>
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <button type="button" class="close" data-bs-dismiss="alert" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
