make app up to date with all requirements

--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -10,10 +10,10 @@
 
   <tbody>
     <% @client.each do |client| %>
-      <tr>
+      <tr id = "client-<%= client.id %>">
         <td><%= client.name %></td>
         <td><%= link_to 'Show', client_path(client), class: 'btn btn-secondary' %></td>
-        <td><%= link_to 'Edit', edit_client_path(client), class: 'btn btn-primary' %></td>
+        <td><%= link_to 'Edit', edit_client_path(client),data: { remote: true }, class: 'btn btn-primary' %></td>
         <td><%= link_to 'Destroy', client_path(client), method: :delete, data: { confirm: 'Are you sure?' } , class: 'btn btn-danger'%></td>
       </tr>
     <% end %>
@@ -23,3 +23,5 @@
 <br>
 
 <%= link_to 'New Client', new_client_path , class: 'btn btn-primary' %>
+
+<div id = "form-container">
