--- a/app/views/clients/edit.html.erb
+++ b/app/views/clients/edit.html.erb
@@ -1,25 +1,1 @@
-<div class="container">
-  <div class="row justify-content-center mt-4 ">
-    <div class="col-md-8">
-      <div class="card">
-        <div class="card-header">Edit Client Details</div>
-        <div class="card-body">
-          <%= form_with(model: @client, local: true) do |f| %>
-            <div class="form-group ">
-              <%= f.label :Name %>
-              <%= f.text_field :name, class: 'form-control mt-2' %>
-            </div>
-            <div class="form-group">
-              <%= f.submit 'Add Client', class: 'btn btn-primary mt-2' %>
-            </div>
-          <% end %>
-            <div class="card-footer text-muted">
-              <%= link_to 'Show', @client, class: 'btn btn-secondary mt-2' %>
-              <%= link_to 'Back', clients_path , class: 'btn btn-secondary mt-2' %>
-            </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
+<%= render 'form' %>
