--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -4,6 +4,16 @@
       <div class="card">
         <div class="card-header">Add a New Client</div>
         <div class="card-body">
+          <% if @client.errors.any? %>
+            <div id="error_explanation">
+              <h2><%= pluralize(@client.errors.count, "error") %> prohibited this location from being saved:</h2>
+              <ul>
+                <% @client.errors.full_messages.each do |message| %>
+                  <li><%= message %></li>
+                <% end %>
+              </ul>
+            </div>
+          <% end %>
           <%= form_with scope: :client , url: clients_path, local: true do |f| %>
             <div class="form-group">
               <%= f.label :Name %>
