--- a/app/views/room_facility_categories/_form.html.erb
+++ b/app/views/room_facility_categories/_form.html.erb
@@ -14,13 +14,13 @@
               </ul>
             </div>
           <% end %>
-          <%= form_with scope: :room_facility_category, url: room_facility_categories_path, local: true do |f| %>
+          <%= form_with(model: @room_facility_category, data: { remote: true}, method: :patch, id: 'edit-form') do |f| %>
             <div class="form-group">
               <%= f.label :Name%>
               <%= f.text_field :name, class: 'form-control' %>
             </div>
             <div class="form-group">
-              <%= f.submit 'Add Category', class: 'btn btn-primary mt-2' %>
+              <%= f.submit 'Update Category', class: 'btn btn-primary mt-2' %>
             </div>
           <% end %>
           <div class="card-footer text-muted">
