--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -1,10 +1,16 @@
 <div class="container mt-5">
   <div class="card">
     <div class="card-header">
-       <h2 class="card-subtitle mb-2 text-muted"><%= @client.name %></h2>
+      <h1 class="card-title"><%= @client.name %></h1>
+    </div>
+       <h2 class="card-subtitle mb-2 text-muted">List of Hotels of <%= @client.name %></h2>
+        <ul>
+        <% @client.hotel_branches.each do |hotel| %>
+          <%= hotel.name %><br/>
+        <% end %>
+        </ul>
     </div>
     <div class="card-footer text-muted">
-      <%= link_to 'Edit', edit_client_path(@client), class: 'btn btn-primary' %>
       <%= link_to 'Back', clients_path, class: 'btn btn-secondary' %>
     </div>
   </div>
