--- a/app/views/clients/_client.html.erb
+++ b/app/views/clients/_client.html.erb
@@ -1,4 +1,4 @@
         <td><%= @client.name %></td>
-        <td><%= link_to 'Show', client_path(@client), class: 'btn btn-secondary' %></td>
-        <td><%= link_to 'Edit', edit_client_path(@client),data: { remote: true }, class: 'btn btn-primary' %></td>
-        <td><%= link_to 'Destroy', client_path(@client), method: :delete, data: { confirm: 'Are you sure?' } , class: 'btn btn-danger'%></td>
+        <td><%= link_to 'Show', client_path(@client), class: 'btn btn-secondary hover-style' %></td>
+        <td><%= link_to 'Edit', edit_client_path(@client),data: { remote: true }, class: 'btn btn-primary hover-style' %></td>
+        <td><%= link_to 'Destroy', client_path(@client), method: :delete, data: { confirm: 'Are you sure?' } , class: 'btn btn-danger hover-style'%></td>
