--- a/app/views/regions/_newform.html.erb
+++ b/app/views/regions/_newform.html.erb
@@ -2,12 +2,11 @@
   <div class="row justify-content-center mt-4 ">
     <div class="col-md-8">
       <div class="card">
-        <div class="card-header">Edit Region Details</div>
+        <div class="card-header">Add a New region</div>
         <div class="card-body">
           <% if @region.errors.any? %>
             <div id="error_explanation">
               <h2><%= pluralize(@region.errors.count, "error") %> prohibited this region from being saved:</h2>
-
               <ul>
                 <% @region.errors.full_messages.each do |message| %>
                   <li><%= message %></li>
@@ -15,7 +14,7 @@
               </ul>
             </div>
           <% end %>
-          <%= form_with(model: @region, data: { remote: true}, id: 'edit-form' ) do |f| %>
+          <%= form_with model: @region, data: { remote: true} do |f| %>
             <div class="form-group">
               <%= f.label :Region%>
               <%= f.text_field :name, class: 'form-control' %>
@@ -25,7 +24,7 @@
               <%= f.select :client_id, Client.all.collect {|x| [x.name, x.id]}, {} %>
             </div>
             <div class="form-group">
-              <%= f.submit 'Update Region', class: 'btn btn-primary mt-2' %>
+              <%= f.submit 'Add Region', class: 'btn btn-primary mt-2' %>
             </div>
           <% end %>
           <div class="card-footer text-muted">
@@ -36,5 +35,6 @@
     </div>
   </div>
 </div>
+
 
 
