--- a/app/views/regions/index.html.erb
+++ b/app/views/regions/index.html.erb
@@ -9,21 +9,22 @@
     </tr>
   </thead>
 
-  <tbody>
-    <% @region.each do |region| %>
-      <tr id="region-<%= region.id %>">
-        <td><%= region.name %></td>
-        <td><%= region.client.name %></td>
-        <td><%= link_to 'Show', region_path(region), class: 'btn btn-secondary' %></td>
-        <td><%= link_to 'Edit', edit_region_path(region), data: { remote: true }, class: 'btn btn-primary' %></td>
-        <td><%= button_to 'Delete', region_path(region), class: 'btn btn-danger', remote: true , method: :delete, data: { confirm: 'Are you sure?' }%></td>
-      </tr>
-    <% end %>
+  <tbody id="hotel-table">
+      <% @region.each do |region| %>
+        <tr id="region-<%= region.id %>">
+          <td><%= region.name %></td>
+          <td><%= region.client.name %></td>
+          <td><%= link_to 'Show', region_path(region), class: 'btn btn-secondary' %></td>
+          <td><%= link_to 'Edit', edit_region_path(region), data: { remote: true }, class: 'btn btn-primary' %></td>
+          <td><%= button_to 'Delete', region_path(region), class: 'btn btn-danger', remote: true , method: :delete, data: { confirm: 'Are you sure?' }%></td>
+        </tr>
+      <% end %>
   </tbody>
 </table>
 
 <br>
 
-<%= link_to 'New Region', new_region_path , class: 'btn btn-primary' %>
+<%= link_to 'New Region', new_region_path , data:{remote: true},class: 'btn btn-primary' %>
 
 <div id="form-container"></div>
+
