--- a/app/views/regions/new.html.erb
+++ b/app/views/regions/new.html.erb
@@ -1,40 +1,1 @@
-<div class="container">
-  <div class="row justify-content-center mt-4 ">
-    <div class="col-md-8">
-      <div class="card">
-        <div class="card-header">Add a New region</div>
-        <div class="card-body">
-          <% if @region.errors.any? %>
-            <div id="error_explanation">
-              <h2><%= pluralize(@region.errors.count, "error") %> prohibited this region from being saved:</h2>
-              <ul>
-                <% @region.errors.full_messages.each do |message| %>
-                  <li><%= message %></li>
-                <% end %>
-              </ul>
-            </div>
-          <% end %>
-          <%= form_with scope: :region, url: regions_path, local: true do |f| %>
-            <div class="form-group">
-              <%= f.label :Region%>
-              <%= f.text_field :name, class: 'form-control' %>
-            </div>
-            <div class="form-group">
-              <%= f.label :Client %><br/>
-              <%= f.select :client_id, Client.all.collect {|x| [x.name, x.id]}, {} %>
-            </div>
-            <div class="form-group">
-              <%= f.submit 'Add Region', class: 'btn btn-primary mt-2' %>
-            </div>
-          <% end %>
-          <div class="card-footer text-muted">
-            <%= link_to 'Back', regions_path, class: 'btn btn-secondary' %>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-
-
+<%= render 'newform' %>
