--- a/app/views/room_facility_categories/_room_facility_category.html.erb
+++ b/app/views/room_facility_categories/_room_facility_category.html.erb
@@ -1,4 +1,4 @@
 <td><%= @room_facility_category.name%></td>
-<td><%= link_to 'Show', @room_facility_category, class: 'btn btn-primary'%></td>
-<td><%= link_to 'Edit', edit_room_facility_category_path(@room_facility_category), data: {remote: true},class: 'btn btn-secondary' %></td>
-<td><%= link_to 'Destroy', @room_facility_category,class: 'btn btn-danger',method: :delete, data: { confirm: 'Are you sure?' } %></td>
+<td><%= link_to 'Show', @room_facility_category, class: 'btn btn-primary hover-style'%></td>
+<td><%= link_to 'Edit', edit_room_facility_category_path(@room_facility_category), data: {remote: true},class: 'btn btn-secondary hover-style' %></td>
+<td><%= link_to 'Destroy', @room_facility_category,class: 'btn btn-danger hover-style',method: :delete, data: { confirm: 'Are you sure?' } %></td>
