--- a/app/views/rooms/_room.html.erb
+++ b/app/views/rooms/_room.html.erb
@@ -2,6 +2,6 @@
         <td><%= @room.capacity %></td>
         <td><%= @room.price %></td>
         <td><%= @room.hotel_branch.name %></td>
-        <td><%= link_to 'Show', room_path(@room) , class: 'btn btn-primary' %></td>
-        <td><%= link_to 'Edit', edit_room_path(@room), data: { remote: true }, class: 'btn btn-secondary' %></td>
-        <td><%= button_to 'Delete', room_path(@room), class: 'btn btn-danger', remote: true , method: :delete, data: { confirm: 'Are you sure?' }%></td>
+        <td><%= link_to 'Show', room_path(@room) , class: 'btn btn-primary hover-style' %></td>
+        <td><%= link_to 'Edit', edit_room_path(@room), data: { remote: true }, class: 'btn btn-secondary hover-style' %></td>
+        <td><%= button_to 'Delete', room_path(@room), class: 'btn btn-danger hover-style', remote: true , method: :delete, data: { confirm: 'Are you sure?' }%></td>
