--- a/app/views/regions/new.js.erb
+++ b/app/views/regions/new.js.erb
@@ -1,2 +1,2 @@
 $("#newModal").modal("show");
-$("#form-container").html("<%= j(render 'regions/newform') %>");
+$("#form-container").html("<%= j(render 'regions/new_modal') %>");
