--- a/app/views/regions/edit.js.erb
+++ b/app/views/regions/edit.js.erb
@@ -1,4 +1,4 @@
 $(document).ready(function() {
   $('#editModal').modal('show');
-  $('#form-container').html('<%= escape_javascript(render 'regions/form') %>');
+  $('#form-container').html('<%= escape_javascript(render 'regions/edit_modal') %>');
 });
