--- a/app/views/locations/new.js.erb
+++ b/app/views/locations/new.js.erb
@@ -1,2 +1,2 @@
 $("#newModal").modal("show");
-$("#form-container").html("<%= j(render 'locations/newform') %>");
+$("#form-container").html("<%= j(render 'locations/new_modal') %>");
